# rust-git-wrapper

./: CHANGELOG.md  Cargo.toml  README.md
src/: bare_repo.rs  lib.rs  x.rs
