[package]
name = "git-wrapper"
version = "0.5.1"
authors = ["Bahtiar `kalkin-` Gadimov <bahtiar@gadimov.de>"]
edition = "2018"
description="Simple handy wrappers around git commands"
readme = "README.md"
keywords = ["git"]
license = "LGPL-3.0-or-later"
repository = "https://github.com/kalkin/rust-git-wrapper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
posix-errors = "^1.2"
thiserror = "1"

[dev-dependencies]
tempdir = "0.3.*"
