[package]
name = 'git-wrapper'
authors = ['Bahtiar `kalkin-` Gadimov <bahtiar@gadimov.de>']
categories = ['development-tools']
description = 'Simple handy wrappers around git commands'
edition = '2021'
keywords = ['git']
license = 'LGPL-3.0-or-later'
readme = 'README.md'
repository = 'https://github.com/kalkin/rust-git-wrapper'
version = '0.5.1'

[dependencies]
posix-errors = '^1.2'
thiserror = '1'

[dev-dependencies]
tempfile = '3'
